objects/Analytical_Snapshot__c.object
<CustomObject>
    <label>Analytical Snapshot</label>
    <nameField>
        <label>Analytical Sanpshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytical Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Quota_Rev__c</fullName>
        <label>Sum of Quota (Rev)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Closed_Rev__c</fullName>
        <label>Sum of Closed (Rev)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Commit_Rev__c</fullName>
        <label>Sum of Commit (Rev)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Best_Case_Rev__c</fullName>
        <label>Sum of Best Case (Rev)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>